--- a/viet/file1.html
+++ b/viet/file1.html
@@ -1,1 +1,15 @@
-<html><head></head><body><p>hello</p><p>so tien la 10 USD</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora%7CMerriweather:300,400"> 
+    <title>Document</title>
+</head>
+<body>
+    <p style="font-family:'Lora';">difhdpoodfpodp</p>
+    <p>difhdpoodfpodp</p>
+    
+</body>
+</html>
